# simplestclaw

./: .gitignore  CHANGELOG.md  README.md  biome.json  pnpm-lock.yaml  railway.json  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: activity.rs  config.rs  lib.rs  runtime.rs  sidecar.rs
yc/:  How to Find Product Market Fit - Stanford CS183F_ Startup School.docx   Lecture 1 - How to Start a Startup (Sam Altman, Dustin Moskovitz).docx   Lecture 4 - Building Product, Talking to Users, and Growing (Adora Cheung).docx   Marc Andreessen_ The real AI boom hasn’t even started yet.docx   The Real Product Market Fit by Michael Seibel.docx   YC David Rusenko - How To Find Product Market Fit.docx  A framework for finding product-market fit _ Todd Jackson (First Round Capital).docx  Before growing your startup.docx  Enterprise sales for hackers.docx  How and Why to Start A Startup - Sam Altman & Dustin Moskovitz - Stanford CS183F_ Startup School.docx  How to Build a Product I - Michael Seibel, Steve Huffman, Emmett Shear - Stanford CS183F.docx  How to Build a Product II - Aaron Levie, co-founder of Box - Stanford CS183F_ Startup School.docx  How to Build a Product III - Stanford CS183F_ Startup School.docx  How to Build a Product IV - Jan Koum, Co-founder of WhatsApp - Stanford CS183F_ Startup School.docx  How to Get Ideas & Measure - Stewart Butterfield of Slack & Adam D_Angelo of Quora - Stanford CS183F.docx  Lecture 3 - Before the Startup (Paul Graham).docx  (+2 more)
(+44 files in other folders)
