[package]
name = "simplestclaw-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = "0.10"
hex = "0.4"
libc = "0.2.180"

[lib]
name = "simplestclaw_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
